# education

./: .gitignore  CMakeLists.txt  README.md  TODO.md  algorithm_exp_of_2.cpp  algorithm_xor_swap.cpp  build.sh  crazy_turtle.py  crazy_turtles.py  lint.sh
ai/agents/: README.md
ai/llm/: init.bash  main.py  requirements.txt
ai/opencv/: main.py
ai/tensorflow/: main.py
android/pecha_kucha_timer/: settings.gradle
android/pecha_kucha_timer/app/: build.gradle
antlr4/python3/: Test.g4  generate_parser  main.py
cmake/: gbenchmark.cmake  setup.sh
compiler/: README.md  web_requirements.txt
compiler/core/: CMakeLists.txt
compiler/core/src/: main.cpp
compiler/tests/: CMakeLists.txt
compiler/web/: app.py
cpp/crtp/: CMakeLists.txt  main.cpp
cpp/string_view/: main.cpp
cpp/structured_concurrency/: CMakeLists.txt  main.cpp
cpp/template_parameters_arguments/: main.cpp
crazy_turtles/: README.md
data_analyst/: README.md  lomb_scargle.py
data_analyst/smoothing/: main.py
data_structures_algorithms/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh  requirements.txt
data_structures_algorithms/cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
data_structures_algorithms/fseek-binary-search/: CMakeLists.txt  fbs.cpp  main.cpp  rbs.cpp  runner.py
data_structures_algorithms/fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
data_structures_algorithms/src/: algorithm_exp_of_2.cpp  algorithm_flood_fill.cpp  algorithm_quicksort.cpp  algorithm_union_find.cpp  algorithm_xor_swap.cpp
data_structures_algorithms/src/bit/: operation.hpp
data_structures_algorithms/src/include/: using_iostream.hpp
data_structures_algorithms/src/sort/: quick_sort.hpp
data_structures_algorithms/src/traverse/: flood_fill.hpp
data_structures_algorithms/src/union_find/: quick_find.hpp  quick_union.hpp  weighted_quick_union.hpp
data_structures_algorithms/src/util/: join.hpp  print.hpp
data_structures_algorithms/test/unit/: CMakeLists.txt  flood_fill_test.cpp  operation_test.cpp  quick_find_test.cpp  quick_sort_test.cpp  tests.cpp
distributed/: README.md
gpu/: cu.py
gpu/copy_speed/: .gitignore  README.md  run.sh
include/: counter.hpp
include/data_structure/list/: coarse_list.hpp  fine_list.hpp  lazy_list.hpp  lockfree_list.hpp  optimistic_list.hpp
include/data_structure/queue/: bounded.hpp  bounded_queue.hpp  lock.hpp  lock_queue.hpp  synchronous_queue.hpp  unbounded_queue.hpp  wait_free_queue.hpp
include/data_structure/skiplist/: lock_skiplist.hpp  lockfree_skiplist.hpp  skiplist.hpp
include/data_structure/stack/: lock_stack.hpp  lockfree_stack.hpp  stack.hpp
include/exception/: empty.hpp  full.hpp
include/lock/: a.hpp  a_lock.hpp  backoff.hpp  bakery.hpp  clh.hpp  filter.hpp  hbo.hpp  hclh.hpp  lock_one.hpp  lock_two.hpp  msc.hpp  one.hpp  peterson.hpp  tas_lock.hpp  ttas_lock.hpp  two.hpp
include/registers/: regular_bool_mrsw.cpp  safe_bool_mrsw.hpp  sequential.hpp
include/util/: backoff.hpp  thread_id.hpp
linux/: clone.cpp
linux/fseek-binary-search/: requirements.txt
linux/memory_mappings/: .clang-format  CMakeLists.txt  common.hpp  p1.cpp  p2.cpp
linux/vectorized_io/: main.cpp
linux_api/fseek-binary-search/: CMakeLists.txt  fbs.cpp  rbs.cpp  runner.py
linux_api/memory_mappings/: .ccls  common.hpp  main.cpp  p1.cpp  p2.cpp  run
linux_api/vectorized_io/: CMakeLists.txt  main.cpp
lisp/: 00_playground.lisp  02_cd_db.lisp  cd_db.lisp  hello_world.lisp
multiprocessor_programming/: CMakeLists.txt  TODO.md  setup.sh
multiprocessor_programming/cmake/: .gitignore  relacy.cmake
multiprocessor_programming/include/lock/: backoff.hpp  bakery.hpp  composite.hpp  composite_fast_path.hpp  filter.hpp  to.hpp
multiprocessor_programming/include/registers/: register.hpp  regular_bool_mrsw.hpp  safe_bool_mrsw.hpp
multiprocessor_programming/test/: CMakeLists.txt
multiprocessor_programming/test/benchmark/: CMakeLists.txt
programming_languages/cpp/coroutine/: init  (+4 more)
programming_languages/cpp/project/: .clang-format  CMakeLists.txt  README.md
programming_languages/cpp/project/cmake/: Conan.cmake  Doxygen.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
programming_languages/cpp/project/fuzz_test/: CMakeLists.txt
programming_languages/cpp/project/src/: CMakeLists.txt  circular.cpp  class_template_type_deduction.cpp  crtp.cpp  demangle.cpp  fold_expressions.cpp  nested_namespaces.cpp  nodiscard.cpp  pass_key.cpp  safe_reinterpret.cpp  stateful_lambda.cpp  std_clamp.cpp  std_hash.cpp  std_in_place.cpp  std_search.cpp  string_view.cpp  structured_concurrency.cpp  template_function.cpp  template_metaprogramming.cpp  thread_management.cpp  unicode.cpp  variant.cpp
programming_languages/cpp/project/src/util/: table.hpp
programming_languages/cpp/project/test/: CMakeLists.txt  catch_main.cpp
programming_languages/cpp_rust/: README.md
programming_languages/julia/: hello_world.jl
programming_languages/lisp/: 03_cd_db.lisp  04_syntax_and_semantics.lisp  05_functions.lisp
programming_languages/python/: gpu.py  random_repeat_group_schedule.py
programming_languages/rust/: a-half-hour-to-learn-rust.rs  hello_world.rs
python/: kill_process.py
quantum_computing/: README.md  requirements.txt
quantum_computing/oreilly-qc/: 02_one_qubit.py
rpg_cpp20/: .ccls  CMakeLists.txt  README.md
rpg_cpp20/cmake/: Conan.cmake
rpg_cpp20/fuzz_test/: fuzz_tester.cpp
rpg_cpp20/src/: CMakeLists.txt  main.cpp
src/: algorithm_flood_fill.cpp  algorithm_recursive_fibonacci_memoization.cpp  class_template_type_deduction.cpp  fold_expressions.cpp  main.cpp  nested_namespaces.cpp  nested_namespaces_std_clamp.cpp  pass_key.cpp  stateful_lambda.cpp  std_clamp.cpp  std_hash.cpp  std_search.cpp  template_metaprogramming.cpp
src/concurrent/: thread_management.cpp
src/include/: counter.hpp  using_iostream.hpp
test/: CMakeLists.txt
test/benchmark/: example.cpp
test/long_run/: CMakeLists.txt
test/unit/: CMakeLists.txt  example.cpp  queue_lock.cpp  registers.cpp
web/: app.py
(+65 files in other folders)
